# trmnl-mbta

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Makefile.dev  README.md  cli.py  config.json  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py  template.html
.devcontainer/: Dockerfile  dev.env.example  devcontainer.json  docker-compose.yml
config/: config.json
docker/: Dockerfile  Makefile.docker  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker.env.example  docker.sh
docs/: DOCKER.md  TESTING_LESSONS.md
examples/: cron-example.txt  systemd-service.txt
scripts/: dev-setup.sh  docker-build.sh  docker-deploy.sh  switch_route.py  sync_deps.py  verify_env.py
src/mbta/: api.py  config.py  constants.py  display.py  main.py  models.py  routes.py
templates/: trmnl-template.html
tests/: README.md  conftest.py  test_config.json  test_env_loading.py  test_integration.py  test_mbta.py
